--- a/MiniPoll/app/src/main/res/layout/activity_login.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_login.xml
@@ -6,13 +6,13 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="be.uclouvain.lsinf1225.musicplayer.activity.LoginActivity">
+    tools:context="lsinf1225.mini_poll.activity.LoginActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher"
+        android:background="@drawable/ic_launcher_background"
         android:contentDescription="@string/app_name"
 
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:prompt="@string/login_username"
+        android:prompt="@string/app_user_username"
         android:spinnerMode="dropdown"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -36,16 +36,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:ems="10"
-        android:hint="@string/login_password_hint"
+        android:hint="@string/app_user_password"
         android:imeActionId="6"
-        android:imeActionLabel="@string/login_btn"
+        android:imeActionLabel="@string/login_title"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_username" />
 
-    <Button
+    <!-- Login et connexion <Button
         android:id="@+id/login_btn"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
@@ -57,4 +57,5 @@
         android:text="@string/login_btn"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password" />
+        -->
 </android.support.constraint.ConstraintLayout>
