--- a/MiniPoll/app/src/main/res/values/colors.xml
+++ b/MiniPoll/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorFont">#79F8F8</color>
+    <color name="colorDarkFont">#00CED1</color>
+    <color name="colorFlash">#FF4081</color>
+    <color name="colorError">#FF0000</color>
+    <color name="colorText">#000000</color>
 </resources>
