--- a/MiniPoll/app/src/main/res/layout/activity_show_list.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_show_list.xml
@@ -3,8 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/show_list_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 
-<ListView
+    <Button
+        android:id="@+id/show_list_id"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
+
+    <ListView
         android:id="@+id/show_listView"
         android:layout_width="137dp"
         android:layout_height="29dp"/>
