--- a/MiniPoll/app/src/main/res/values/styles.xml
+++ b/MiniPoll/app/src/main/res/values/styles.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
 
     <!-- Base application theme. -->
@@ -5,6 +7,22 @@
         <item name="colorPrimary">@color/colorFont</item>
         <item name="colorPrimaryDark">@color/colorDarkFont</item>
         <item name="colorAccent">@color/colorFlash</item>
+    </style>
+
+    <style name="main_btn">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:padding">@dimen/default_padding</item>
+        <item name="android:layout_margin">10dip</item>
+        <item name="android:drawableRight">@drawable/ic_go</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
     </style>
 
 </resources>
