--- a/MiniPoll/app/src/main/res/values/styles.xml
+++ b/MiniPoll/app/src/main/res/values/styles.xml
@@ -4,9 +4,19 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textSize">20sp</item>
+        <item name="android:actionBarStyle">@style/AppTheme.actionBar</item>
         <item name="colorPrimary">@color/colorFont</item>
         <item name="colorPrimaryDark">@color/colorDarkFont</item>
-        <item name="colorAccent">@color/colorFlash</item>
+        <item name="colorAccent">@color/colorError</item>
+    </style>
+
+    <style name="AppTheme.actionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
+        <item name="android:titleTextStyle">@style/AppTheme.actionBar.title</item>
+    </style>
+
+    <style name="AppTheme.actionBar.title">
+        <item name="android:textSize">25sp</item>
     </style>
 
     <style name="main_btn">
@@ -19,6 +29,7 @@
         <item name="android:textColor">#000</item>
         <item name="android:padding">@dimen/default_padding</item>
         <item name="android:layout_margin">10dip</item>
+        <item name="android:background">@drawable/main_btn_shape</item>
         <item name="android:drawableRight">@drawable/ic_go</item>
         <item name="android:layout_alignParentLeft">true</item>
         <item name="android:layout_alignParentRight">true</item>
