--- a/MiniPoll/app/src/main/res/layout/activity_login.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:onClick="forgot"
-        android:textColor="#0000FF"
+        android:textColor="@color/helpBlue"
         android:textSize="12sp"
         android:textStyle="italic"
         android:text="@string/login_password_forgotten"
@@ -91,7 +91,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:onClick="newUser"
-        android:textColor="#0000FF"
+        android:textColor="@color/helpBlue"
         android:textSize="12sp"
         android:textStyle="italic"
         android:text="@string/login_create_account"
