--- a/MiniPoll/app/src/main/res/layout/activity_show_list.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_show_list.xml
@@ -1,35 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/show_list_header"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<ListView
+    android:id="@+id/show_listViewAmi"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
-    </ScrollView>
-
-    <Button
-        android:id="@+id/show_list_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/show_list_id"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
-
-    <ListView
-        android:id="@+id/show_listView"
-        android:layout_width="137dp"
-        android:layout_height="29dp"/>
+<ScrollView
+    android:id="@+id/show_listViewAmi2"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp" />
 
 </android.support.constraint.ConstraintLayout>
