--- a/MiniPoll/app/src/main/res/layout/activity_change_username.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_change_username.xml
@@ -14,15 +14,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="140dp"
         android:ems="10"
         android:hint="@string/change_username_new"
+        android:imeActionId="6"
         android:imeActionLabel="@string/change_username_new"
         android:imeOptions="actionDone"
         android:inputType="text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/change_username_confirm"
