ShowListQuestion + ShowQuest Felix et margaux

--- a/MiniPoll/app/src/main/res/layout/activity_show_list_question.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_show_list_question.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/show_listViewQuest"
+        android:id="@+id/show_listViewQuestion"
         android:layout_width="wrap_content"
         android:layout_height="0dp" />
 
     <ScrollView
-        android:id="@+id/show_listViewQuest2"
+        android:id="@+id/show_listViewQuestion2"
         android:layout_width="wrap_content"
         android:layout_height="0dp" />
 
