--- a/MiniPoll/app/src/main/res/layout/show_sondage_results.xml
+++ b/MiniPoll/app/src/main/res/layout/show_sondage_results.xml
@@ -13,116 +13,93 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/option2"
+            android:id="@+id/option_result1"
             android:layout_width="163dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="60dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/you2"
-            app:layout_constraintHorizontal_bias="0.928"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option1" />
+            app:layout_constraintTop_toTopOf="@+id/divider2" />
 
         <TextView
-            android:id="@+id/option3"
+            android:id="@+id/option_result2"
             android:layout_width="163dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/you3"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option2" />
+            app:layout_constraintTop_toBottomOf="@+id/option_result1" />
 
         <TextView
-            android:id="@+id/option4"
+            android:id="@+id/option_result3"
             android:layout_width="163dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/you4"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option3" />
+            app:layout_constraintTop_toBottomOf="@+id/option_result2" />
 
         <TextView
-            android:id="@+id/option5"
+            android:id="@+id/option_result4"
             android:layout_width="163dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/you5"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option4" />
+            app:layout_constraintTop_toBottomOf="@+id/option_result3" />
 
         <TextView
-            android:id="@+id/option6"
+            android:id="@+id/option_result5"
             android:layout_width="163dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/you6"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option5" />
+            app:layout_constraintTop_toBottomOf="@+id/option_result4" />
 
         <TextView
             android:id="@+id/sondageDescription"
             android:layout_width="337dp"
-            android:layout_height="40dp"
+            android:layout_height="41dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.516"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/option1"
+            android:id="@+id/option_result6"
             android:layout_width="163dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/you1"
-            app:layout_constraintHorizontal_bias="0.958"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sondageDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/option_result5" />
 
         <TextView
             android:id="@+id/total1"
@@ -140,13 +117,13 @@
             android:id="@+id/total6"
             android:layout_width="63dp"
             android:layout_height="45dp"
-            android:layout_marginBottom="88dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/waiting"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/total5"
             app:layout_constraintVertical_bias="0.0" />
@@ -221,7 +198,7 @@
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/waiting"
             app:layout_constraintEnd_toStartOf="@+id/total6"
             app:layout_constraintTop_toBottomOf="@+id/you5"
             app:layout_constraintVertical_bias="0.0" />
@@ -278,12 +255,12 @@
             android:id="@+id/totalTitle"
             android:layout_width="61dp"
             android:layout_height="41dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginRight="36dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginRight="48dp"
+            android:layout_marginTop="6dp"
             android:text="Total"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sondageDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <TextView
             android:id="@+id/youTitle2"
@@ -293,12 +270,41 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="6dp"
             android:text="Vous"
             app:layout_constraintEnd_toStartOf="@+id/totalTitle"
-            app:layout_constraintHorizontal_bias="0.957"
+            app:layout_constraintHorizontal_bias="0.914"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="368dp"
+            android:layout_height="1dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sondageDescription" />
+
+        <TextView
+            android:id="@+id/waiting"
+            android:layout_width="314dp"
+            android:layout_height="43dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/option_result6" />
 
 
     </android.support.constraint.ConstraintLayout>
